# dshare-hid

./: .gitattributes  .gitignore  .gitmodules  BUILD_MACOS.md  CMakeLists.txt  PLAN.md  README.md  README_zh-CN.md  known_bugs.md  run_task.bat  run_task.sh
src/: CMakeLists.txt  CMakeLists.user.cmake
src/apps/: CMakeLists.txt
src/apps/deskflow-core/: CMakeLists.txt  CoreArgParser.cpp  CoreArgParser.h  CoreArgs.h  deskflow-core.cpp
src/apps/deskflow-daemon/: CMakeLists.txt  DaemonApp.cpp  DaemonApp.h  deskflow-daemon.cpp
src/apps/deskflow-gui/: CMakeLists.txt  deskflow-gui.cpp
src/apps/res/: deskflow.plist.in  deskflow.qrc  dshare-hid.qrc  manpage.txt
src/lib/arch/: Arch.cpp  Arch.h  CMakeLists.txt
src/lib/arch/win32/: ArchMultithreadWindows.cpp  ArchNetworkWinsock.cpp
src/lib/base/: CMakeLists.txt
src/lib/client/: BridgeClientApp.cpp  BridgeClientApp.h  BridgeSocketFactory.cpp  BridgeSocketFactory.h  CMakeLists.txt  Client.cpp
src/lib/common/: CMakeLists.txt  Constants.h.in  Settings.cpp  Settings.h  UrlConstants.h
src/lib/deskflow/: App.cpp  App.h  CMakeLists.txt  ClientApp.cpp  ClientApp.h  CoreArgParser.cpp  CoreArgParser.h  CoreArgs.h  PlatformScreen.h  ProtocolTypes.cpp  ProtocolTypes.h  ServerApp.cpp
src/lib/deskflow/unix/: AppUtilUnix.cpp
src/lib/gui/: CMakeLists.txt  CMakeLists.user.cmake  DeskflowHidExtension.cpp  DeskflowHidExtension.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ScreenSetupModel.cpp  ScreenSetupModel.h  StyleUtils.h
src/lib/gui/config/: ScreenList.cpp  ScreenList.h  ServerConfig.cpp  ServerConfig.h
src/lib/gui/core/: BridgeClientConfigManager.cpp  BridgeClientConfigManager.h  BridgeClientManager.cpp  BridgeClientManager.h  BridgeClientProcess.cpp  BridgeClientProcess.h  BridgeDeviceService.cpp  BridgeDeviceService.h  CoreProcess.cpp  CoreProcess.h
src/lib/gui/devices/: LinuxUdevMonitor.cpp  MacUsbMonitor.h  MacUsbMonitor.mm  UsbDeviceHelper.cpp  UsbDeviceHelper.h  UsbDeviceMonitor.cpp  UsbDeviceMonitor.h  WindowsUsbMonitor.cpp  WindowsUsbMonitor.h
src/lib/gui/dialogs/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  BridgeClientConfigDialog.cpp  BridgeClientConfigDialog.h  ServerConfigDialog.cpp  ServerConfigDialog.h  (+2 more)
src/lib/net/: SecureSocket.cpp  SecureUtils.cpp  SocketMultiplexer.cpp  TCPListenSocket.cpp
src/lib/platform/: CMakeLists.txt  EiScreen.cpp  MSWindowsWatchdog.cpp  OSXAutoTypes.h  OSXKeyState.cpp  PortalInputCapture.cpp  XDGPortalRegistry.h
src/lib/server/: BaseClientProxy.h  ClientProxy.cpp  ClientProxy.h  ClientProxyUnknown.cpp  Server.cpp  Server.h
src/unittests/: CMakeLists.txt
src/unittests/common/: CMakeLists.txt
src/unittests/deskflow/: CMakeLists.txt
src/unittests/gui/: CMakeLists.txt
src/unittests/legacytests/: CMakeLists.txt
(+95 files in other folders)
